border index fixed on smaller screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -534,7 +534,7 @@ img {
   border-width: 18px;
   border-color: #00ffcc;
   position: absolute;
-  z-index: 10;
+  z-index: -1;
   bottom: 2rem;
   right: 0;
 }
@@ -617,6 +617,7 @@ img {
     width: 20rem;
     height: 18rem;
     right: -1.5rem;
+    z-index: -1;
   }
 
   .katie-bouman-image,
